consul-base-mesh/assets/envoy-reverse-proxy.yml
static_resources:
    listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 8085
      filter_chains:
      - filters:
        - name: envoy.filters.network.http_connection_manager
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
            codec_type: auto
            stat_prefix: ingress_http
            route_config:
              name: local_route
              virtual_hosts:
              - name: backend
                domains:
                - "*"
                routes:
                - match:
                    prefix: "/"
                  route:
                    cluster: consul-api
                - match:
                    prefix: "/admin"
                  route:
                    cluster: admin
            http_filters:
            - name: envoy.filters.http.router
              typed_config: {}
  
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 8443
      filter_chains:
      - filters:
        - name: envoy.filters.network.http_connection_manager
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
            codec_type: auto
            stat_prefix: ingress_http
            route_config:
              name: local_route
              virtual_hosts:
              - name: backend
                domains:
                - "*"
                routes:
                - match:
                    prefix: "/"
                    route:
                    cluster: consul-api
                - match:
                    prefix: "/admin"
                    route:
                    cluster: admin
            http_filters:
            - name: envoy.filters.http.router
              typed_config: {}
  
        transport_socket:
          name: envoy.transport_sockets.tls
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
            common_tls_context:
              tls_certificates:
                # The following self-signed certificate pair is generated using:
                # $ openssl req -x509 -newkey rsa:2048 -keyout a/front-proxy-key.pem -out  a/front-proxy-crt.pem -days 3650 -nodes -subj '/CN=front-envoy'
                #
                # Instead of feeding it as an inline_string, certificate pair can also be fed to Envoy
                # via filename. Reference: https://www.envoyproxy.io/docs/envoy/latest/api-v3/config/core/v3/base.proto#config-core-v3-datasource.
                #
                # Or in a dynamic configuration scenario, certificate pair can be fetched remotely via
                # Secret Discovery Service (SDS). Reference: https://www.envoyproxy.io/docs/envoy/latest/configuration/security/secret.
                certificate_chain:
                  inline_string: |
                    -----BEGIN CERTIFICATE-----
                    MIICqDCCAZACCQCquzpHNpqBcDANBgkqhkiG9w0BAQsFADAWMRQwEgYDVQQDDAtm
[...]
                    m+/R4XnmL4cKQ+5Z
                    -----END CERTIFICATE-----
                private_key:
                  inline_string: |
                    -----BEGIN PRIVATE KEY-----
                    MIIEvQIBADANBgkqhkiG9w0BAQEFAASCBKcwggSjAgEAAoIBAQC2GdiSpVAFf5aD
[...]
                    q5sGxGrC1RECGB5Zwx2S2ZY=
                    -----END PRIVATE KEY-----
    clusters:
    - name: consul-api
      connect_timeout: 0.25s
      type: strict_dns
      lb_policy: round_robin
      http2_protocol_options: {}
      load_assignment:
        cluster_name: consul-api
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: 127.0.0.1
                  port_value: 8500
    - name: admin
      connect_timeout: 0.25s
      type: strict_dns
      lb_policy: round_robin
      http2_protocol_options: {}
      load_assignment:
        cluster_name: consul-api
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: 127.0.0.1
                  port_value: 8001
  admin:
    access_log_path: "/dev/null"
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8001
  layered_runtime:
    layers:
      - name: static_layer_0
        static_layer:
          envoy:
            resource_limits:
              listener:
                example_listener_name:
                  connection_limit: 10000
