consul-base-mesh/assets/ext-envoy-reverse-proxy.yaml
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 443 }

    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: auto
          stat_prefix: ingress_http
          access_log:
          - name: envoy.file_access_log
            config:
              path: "/dev/stdout"
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains:
                - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: consul-api
          http_filters:
          - name: envoy.router

      transport_socket:
          name: envoy.transport_sockets.tls
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
            common_tls_context:
              tls_certificates:
                # The following self-signed certificate pair is generated using:
                # $ openssl req -x509 -newkey rsa:2048 -keyout a/front-proxy-key.pem -out  a/front-proxy-crt.pem -days 3650 -nodes -subj '/CN=front-envoy'
                #
                # Instead of feeding it as an inline_string, certificate pair can also be fed to Envoy
                # via filename. Reference: https://www.envoyproxy.io/docs/envoy/latest/api-v3/config/core/v3/base.proto#config-core-v3-datasource.
                #
                # Or in a dynamic configuration scenario, certificate pair can be fetched remotely via
                # Secret Discovery Service (SDS). Reference: https://www.envoyproxy.io/docs/envoy/latest/configuration/security/secret.
                certificate_chain:
                  inline_string: |
                    -----BEGIN CERTIFICATE-----
                    MIICqDCCAZACCQCquzpHNpqBcDANBgkqhkiG9w0BAQsFADAWMRQwEgYDVQQDDAtm
[...]
                    m+/R4XnmL4cKQ+5Z
                    -----END CERTIFICATE-----
                private_key:
                  inline_string: |
                    -----BEGIN PRIVATE KEY-----
                    MIIEvQIBADANBgkqhkiG9w0BAQEFAASCBKcwggSjAgEAAoIBAQC2GdiSpVAFf5aD
[...]
                    q5sGxGrC1RECGB5Zwx2S2ZY=
                    -----END PRIVATE KEY-----

  clusters:
  - name: consul-api
    connect_timeout: 5.0s
    type: STRICT_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    hosts: [
      { socket_address: { address: 127.0.0.1, port_value: 8500 }}
    ]
